src/test/contracts/negative/pattern_matching_anomalies/missing_cases/c_c.jsligo
type p = ["Four"] | ["Five"] | ["Six"]

type t = ["One", p] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x, {
  Two: (_ : nat) => unit,
  Three: ()      => unit,
  One: (c : p)   => (match(c, {  
      Four: () => unit
    }))
  })